# leetcode

./: pyproject.toml
top-100-liked/: README.md
top-100-liked/01-two-sum/: twoSum_test.py
top-100-liked/02-group-anagrams/: groupAnagrams_test.py
top-100-liked/03-longest-consecutive-sequence/: longestConsecutive_test.py
top-100-liked/04-move-zeroes/: moveZeroes_test.py
top-100-liked/05-container-with-most-water/: maxArea_test.py
