[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Dz <MathBeWithCode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
